Buttons text align center fixed

--- a/assets/css/damai.css
+++ b/assets/css/damai.css
@@ -49,6 +49,7 @@ body {
     padding: 15px 50px;
     border-radius: 15px;
     font-weight: 200;
+    text-align: center;
 }
 
 /* Primary Button */
